[package]
name = "liquid-glass"
version = "0.1.0"
edition = "2021"
description = "Liquid Glass UI effect (Apple-style glassmorphism) rendered via WebGL2, controlled from JS"
license = "MIT"
repository = "https://github.com/your-org/liquid-glass"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Node",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "DomRect",
  "DomRectReadOnly",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "MouseEvent",
  "Event",
  "EventTarget",
  "EventListener",
  "Performance",
  "NodeList",
  "AddEventListenerOptions",
  "DomStringMap",
]

[features]
default = ["panic_hook"]
panic_hook = ["console_error_panic_hook"]

# Максимальная скорость и минимальный размер .wasm
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# wasm-pack по умолчанию сам запускает встроенный (старый) wasm-opt, который
# не понимает bulk-memory/non-trapping-float инструкции современного rustc
# и падает на этапе валидации. Отключаем — оптимизацию делаем отдельным
# шагом в CI явным вызовом wasm-opt нужной версии.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
